@startuml

class ImageReader {
  -virtual void read(const std::string& filePath) = 0
  -virtual ~ImageReader() = default
}

class GifReader {
  +void read(const std::string& filePath) override
}

class JpgReader {
  +void read(const std::string& filePath) override
}

class ImageReaderFactory {
  -virtual std::unique_ptr<ImageReader> createReader(const std::string& type) = 0
  -virtual ~ImageReaderFactory() = default
}

class ConcreteImageReaderFactory {
  +std::unique_ptr<ImageReader> createReader(const std::string& type) override
}

ImageReader <|-- GifReader
ImageReader <|-- JpgReader

ImageReaderFactory <|-- ConcreteImageReaderFactory

@enduml
